# movie-recommender

./: README.MD
projects/00-vpc/: template.yaml
projects/01-s3-mwaa/: airflow_local_settings.py  requirements.txt  startup.sh  template.yaml
projects/03-iam-mwaa/: template.yaml
projects/04-mwaa/: template.yaml
projects/902-bedrock/: template.yaml
projects/902-ecr-mwaa/: template.yaml
projects/993-lambda/: template.yaml  templateold.yaml
projects/993-lambda/lambda-orchestrator/: Makefile  README.md  pyproject.toml  template.yaml
projects/993-lambda/lambda-orchestrator/src/: __init__.py  orchestrator.py  orchestrator.pyi
projects/993-lambda/lambda-orchestrator/tests/: conftest.py  test_integration.py
projects/993-lambda/lambda-orchestrator/tests/resources/: parquetfile  parquetfile2  txtfile
