[tool.poetry]
name = "lambda-orchestrator"
version = "1.0.0"
description = "Lambda used to orchestrate the AI-based video recommendation system"
authors = ["Frelin AMPILAHY <randofrils@gmail.com>"]
readme = "README.MD"

[tool.poetry.dependencies]
python = "^3.12"
python-json-logger = "^3.2.1"
#pandas = "^2.2.3"
#pyarrow = "^18.1.0"
#fastparquet = "^2024.11.0"

[[tool.poetry.packages]]
include = "src/*.py"

[tool.poetry.group.dev.dependencies]
python = "^3.12"
flake8 = "^7.0.0"
pytest = "^8.2.0"
black = "^24.4.2"
mypy = "^1.10.0"
boto3 = "^1.34.104"
localstack = "^4.0.3"
docker = "^7.1.0"
boto3-stubs = "^1.35.92"
#pandas-stubs = "^2.2.3.241126"
#pyarrow-stubs = "^17.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[mypy]
mypy_path = "src"
